--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,15 +42,27 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$androidx_appcompat"
     implementation "androidx.core:core-ktx:$androidx_core_ktx"
+
+    // material design
     implementation "com.google.android.material:material:$material"
+
+    // constraint layout
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
+
+    // navigation component
     implementation "androidx.navigation:navigation-fragment:$navigation"
-    implementation "androidx.navigation:navigation-ui:$navigation"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation"
+    implementation "androidx.navigation:navigation-ui:$navigation"
+
+    // lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
+
+    // local tests
     testImplementation "junit:junit:$junit"
     androidTestImplementation "androidx.test.ext:junit:$test_ext"
+
+    // instrumentation tests
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core"
     androidTestImplementation "androidx.test:rules:$test_rules"
 }
