--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,19 @@ buildscript {
         material = '1.1.0'
         navigation = '2.3.0'
         lifecycle = '2.2.0'
-        junit = '4.12'
+        junit = '4.13'
         test_ext = '1.1.1'
         espresso_core = '3.2.0'
         test_rules = '1.3.0-rc01'
+        mPAndroidChart = 'v3.1.0'
+        retrofit = '2.9.0'
+        moshi = '1.9.3'
 
     }
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
 
     }
     dependencies {
@@ -36,7 +40,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven { url 'https://jitpack.io' }
     }
 }
 
