--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
 
     // firebase cloud store
     implementation 'com.google.firebase:firebase-firestore-ktx:21.5.0'
+
+    // firebaseUI Cloud Store
+    implementation 'com.firebaseui:firebase-ui-firestore:6.2.1'
 }
