--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ android {
         }
     }
 
+    viewBinding {
+        enabled = true
+
+    }
+
     dataBinding {
         enabled = true
     }
